--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "sonar": "sonar-scanner"
+    "sonar": "sonar-scanner",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^13.1.0",
     "@angular/cdk": "^13.1.0",
+    "@angular/cli": "^13.1.0",
     "@angular/common": "^13.1.0",
     "@angular/compiler": "^13.1.0",
+    "@angular/compiler-cli": "^13.1.0",
     "@angular/core": "^13.1.0",
     "@angular/forms": "^13.1.0",
     "@angular/material": "^13.3.7",
@@ -23,14 +26,15 @@
     "@angular/platform-browser-dynamic": "^13.1.0",
     "@angular/router": "^13.1.0",
     "@apirtc/apirtc": "^4.7.3",
+    "express": "^4.19.2",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "typescript": "~4.6.4",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.1.0",
-    "@angular/cli": "^13.1.0",
-    "@angular/compiler-cli": "^13.1.0",
     "@types/jasmine": "^4.0.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
@@ -44,7 +48,10 @@
     "protractor": "~7.0.0",
     "sonar-scanner": "^3.1.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.6.4"
+    "tslint": "~6.1.0"
+  },
+  "engines": {
+    "node": "12.18.2",
+    "npm": "6.14.5"
   }
 }
